[project]
name = "maze-solver-visualized"
version= "0.1.0"
description = "A visualized maze solver and generator"
authors = [
  {name = "Muhammad Haris Mujeeb", email = "harrismujib12@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]